<resources>
    <!--    whole app-->
    <string name="app_name">Moodier</string>
    <string name="title_home">Home</string>
    <string name="title_goals">Goals</string>
    <string name="title_mood">Mood</string>
    <string name="set_a_goal">Set a Goal      </string>
    <string name="log_your_mood">Log your mood</string>
    <string name="submit">Submit</string>
    <string name="Back">Back</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="About">About</string>

    <!--    Log mood activity-->
    <string name="mood_info">How Are You Feeling Today?  (Use the slider to choose what best describes your mood)</string>
    <string name="mood_continue">Continue</string>
    <string name="view_mood_record">View mood records</string>
    <string name="clear_record">Clear Records</string>
    <string name="dialog_title">Warning！</string>
    <string name="dialog_message">Are you make sure to exit before saving your mood?</string>

    <!--    Set goal activity-->
    <string name="set_goal_info">Choose or create a goal that seems important to your treatment that feels achievable to you</string>
    <string name="enter_own_goal">Enter your own goal.</string>
    <string name="Goal1">Your first goal here.</string>
    <string name="Goal2">Your second goal</string>
    <string name="Goal3">Your third goal</string>
    <string name="Goal4">Your forth goal</string>
    <string name="enter_own_goal_detail">Enter your goal in the following:</string>
    <string name="detailOf_your_own_goal">Your goal here</string>
    <string name="show_id">show id</string>
    <string name="show_message">show goal detail</string>
    <string name="delete_message">delete this goal</string>
    <string name="goal_tip">This is your goal in plan. Please consider carefully when you manipulate.</string>
    <string name="your_goal_is">Your goal is: </string>

    <!--    login activity-->
    <string name="Login">Login</string>
    <string name="LoginName">username</string>
    <string name="Password">password</string>
    <string name="PasswordName">password</string>
    <string name="LoginButton">Login</string>


    <!--    user information page-->
    <string name="user_info_page">Me</string>
    <string name="mylog">MyLog</string>
    <string name="title_activity_set_goal_new">SetGoalActivityNew</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="all_entry">All entries</string>
    <string name="mood">Mood</string>
    <string name="goal">Goal</string>
    <string name="your_log">Your log</string>
    <string name="title_activity_test_your_mood">TestYourMood</string>


</resources>