<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.log.MylogFragment">

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDisplayall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_entry"
            android:background="@drawable/buttonshape2"/>

        <Button
            android:id="@+id/btnDisplayMoods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood"
            android:background="@drawable/buttonshape"/>

        <Button
            android:id="@+id/btnDisplayGoals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal"
            android:background="@drawable/buttonshape_down"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_log"
        android:textAlignment="center"
        android:background="@drawable/buttonshape2" />

    <ListView
        android:id="@+id/lstLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp" />


</LinearLayout>