<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/show_message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="57dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/show_message"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_id" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="10dp"
        android:text="@string/delete_message"
        app:layout_constraintBottom_toTopOf="@+id/btn_back"
        app:layout_constraintEnd_toEndOf="@+id/show_message"
        app:layout_constraintTop_toBottomOf="@+id/show_message" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:text="@string/Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_delete"
        app:layout_constraintStart_toStartOf="@+id/btn_delete"
        app:layout_constraintTop_toBottomOf="@+id/btn_delete" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="399dp"
        android:layout_height="90dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="13dp"
        android:text="@string/goal_tip"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/show_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/show_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/show_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>